Styled the project with CSS

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,60 @@
+body {
+    background:#f9f7fe;
+    font-family:monospace;
+}
+
+
 h1 {
     text-align: center;
+    font-size:36px;
+}
+
+h2 {
+    margin:0;
+    font-size:28px;
+}
+
+
+select {
+    display:block;
+    width:100%;
+    border-radius:4px;
+    padding:10px;
+    font-size:18px;
+}
+
+.container {
+   max-width:600px; 
+   margin:60px auto;
+   background:white;
+   padding:30px;
+   border-radius:10px;
+   box-shadow:rgba(100, 100, 111, 0.2)0px 7px 29px 0px;
+}
+
+.city {
+    display:flex;
+    justify-content: space-between;
+    margin:20px 0;
+    border-bottom: 1px dashed rgba(0,0,0,0.2);
+    padding:20px;
+}
+
+.date {
+    color:rgba(0,0,0,0.6); 
+    
+}
+
+.time {
+    font-size:48px;
+    font-weight: bold;
+    vertical-align: middle;  
+}
+
+.time small {
+    font-size: 24px;
+}
+
+footer {
+    text-align:center;
 }
