Updated the CSS

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,11 @@ select {
     justify-content: space-between;
     margin:20px 0;
     border-bottom: 1px dashed rgba(0,0,0,0.2);
-    padding:20px;
+    padding:30px;
+}
+
+.city:last-child {
+    border:none;
 }
 
 .date {
