--- a/src/style.css
+++ b/src/style.css
@@ -115,6 +115,7 @@ footer {
 
     .time {
         font-size: 26px;
+        margin-left: 25px;
     }
 
     .city {
@@ -122,7 +123,7 @@ footer {
     }
 
     .date {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .back-link {
